<resources>
    <string name="app_name">Caminhos de Marte</string>
    <string name="de">De</string>
    <string name="para">Para</string>
    <string name="buscar">Buscar</string>
    <string name="dijkstra">Dijkstra</string>
    <string name="recursivo">Recursivo</string>
    <string name="mapa_de_marte">Mapa de Marte</string>
    <string name="caminho_selecionado">Caminho selecionado: ---</string>
    <string name="dados_caminho_selecionado">Dados caminho selecionado: ---</string>
</resources>