<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <Spinner
        android:id="@+id/spinner_destino"
        android:layout_width="172dp"
        android:layout_height="39dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_origem"
        android:layout_width="172dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="133dp"
        android:layout_height="85dp"
        android:layout_marginTop="108dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Algoritmo"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_button_recursivo"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onAlgoritmoSelecionado"
            android:text="@string/recursivo"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="113dp" />

        <RadioButton
            android:id="@+id/radio_button_dijkstra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAlgoritmoSelecionado"
            android:text="@string/dijkstra"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="146dp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_buscar"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_marginTop="136dp"
        android:text="@string/buscar"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/list_view_caminhos"
        android:layout_width="235dp"
        android:layout_height="134dp"
        android:layout_marginTop="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_mapa"
        android:layout_width="478dp"
        android:layout_height="240dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/mapa_de_marte"
        android:src="@drawable/mapa_de_marte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_caminho_selecionado"
        android:layout_width="477dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/caminho_selecionado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/text_view_dados_caminho_selecionado"
        android:layout_width="477dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/dados_caminho_selecionado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ellipsize="end" />

</androidx.constraintlayout.widget.ConstraintLayout>